--- a/TransporteApp/src/index.html
+++ b/TransporteApp/src/index.html
@@ -13,10 +13,10 @@
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBU9txoviYeaQTPp6t0y3IZoZmUWhvddE4&libraries=places" async defer></script>
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBU9txoviYeaQTPp6t0y3IZoZmUWhvddE4&libraries=places"></script>
+    <!-- add to homescreen for ios -->
+    <meta name="mobile-web-app-capable" content="yes">    
+      <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
 <body>
